Fix Date top white space in Weblog article
The markup was changed.

--- a/assets/css/component/_date.css
+++ b/assets/css/component/_date.css
@@ -2,7 +2,7 @@
 	font-size: var(--font-size-small);
 }
 
-header > .date:first-child {
+.site-menu + .date {
 	margin-block-start: var(--space-huge);
 }
 
